# esp32-s3_boot2

./: CMakeLists.txt  IMPLEMENTATION_PLAN.md
boot2/: clk_init.c  clk_init.h  io.h  io_uart.c  io_usb_jtag.c  loader.c  main.c  psram.c  psram.h  rom_symbols.h  start.S  wdt.c
boot2/idf_shims/: bootloader_flash.h  esp_assert.h  esp_attr.h  esp_bit_defs.h  esp_cache.h  esp_err.h  esp_log.h  esp_rom_cache_wrappers.c  esp_types.h  libc_stubs.c  sdkconfig.h  stdlib.h
boot2/idf_shims/esp_private/: esp_cache_private.h  esp_gpio_reserve.h
boot2/idf_shims/hal/: assert.h
boot2/idf_shims/rom/: cache.h
cmake/: toolchain-esp32s3.cmake
linker/: boot2.ld
port/: app_header.h
scripts/: pack_app.py  pack_image.py
test/hello-world/: CMakeLists.txt  app.ld  main.c
test/hello-world-psram/: CMakeLists.txt  app.ld  main.c
test/touch-lcd/: CMakeLists.txt  board.h  clv3_widget_demo.h  clv3_widgets.h  hal_gpio.h  hal_i2c.c  hal_i2c.h  lcd_axs15231b.c  lcd_axs15231b.h  libc_stubs.c  main.c  printf.c  touch_axs15231b.c  touch_axs15231b.h
